fix backface-visibility for safari

--- a/_sass/new-styles/modules/_accordion.scss
+++ b/_sass/new-styles/modules/_accordion.scss
@@ -69,6 +69,10 @@
     &::before, &::after {
       position: absolute;
       background-color: #FFF7F1;
+      -webkit-perspective: 0;
+      -webkit-backface-visibility: hidden;
+      -webkit-transform: translate3d(0,0,0);
+      visibility:visible;
       backface-visibility: hidden;
       width: 100%;
     }
