--- a/_sass/new-styles/modules/jamstack/_jamstack.scss
+++ b/_sass/new-styles/modules/jamstack/_jamstack.scss
@@ -117,6 +117,7 @@
     width: 100px;
     text-align: right;
     border: 0;
+    background: none;
     transition: transform .4s;
     transform-style: preserve-3d;
 
@@ -124,6 +125,10 @@
       position: absolute;
       left: 0;
       font-weight: 600;
+      -webkit-perspective: 0;
+      -webkit-backface-visibility: hidden;
+      -webkit-transform: translate3d(0,0,0);
+      visibility:visible;
       backface-visibility: hidden;
     }
 
